fixing up the icons on mobile

--- a/src/css/project.less
+++ b/src/css/project.less
@@ -107,9 +107,16 @@ svg {
   }
   &.photo-slide {
     padding: 100px 0 50px 0;
+    @media @mobile {
+      padding: 30px 0;
+    }
   }
   &.report-slide {
     padding: 100px 0;
+    @media @mobile {
+      padding: 0;
+      padding-top: 20px;
+    }
   }
   &.quote-slide {
     padding: 50px 0;
@@ -122,6 +129,10 @@ svg {
     padding: 100px 0;
     @media @tablet {
       height: 1000px;
+    }
+    @media @mobile {
+      height: 100%;
+      padding: 30px 0;
     }
   }
   &.gif-slide, &.audio-slide {
@@ -144,6 +155,9 @@ svg {
   .text {
     max-width: 800px;
     margin: auto;
+    @media @mobile {
+      padding: 0 10px;
+    }
     &.float-left {
       .flex(0 0 40%);
       max-width: 400px;
@@ -180,6 +194,9 @@ svg {
       color: white;
       font-family: @bold-graphics;
       font-size: 25px;
+      @media @mobile {
+        font-family: @med-graphics;
+      }
       // padding-bottom: 40px;
       // max-width: 400px;
     }
@@ -212,6 +229,9 @@ svg {
   font-size: 18px;
   .fa {
     padding-right: 10px;
+  }
+  @media @mobile {
+    font-size: 16px;
   }
 }
 
@@ -254,12 +274,16 @@ svg {
       .flex(0 0 100%);
     }
     @media @mobile {
-      padding-left: 0;
+      padding: 0 10px;
+      padding-bottom: 20px;
     }
   }
   .audio-text {
     @media @mobile {
+      font-family: @block-graphics;
+      padding: 20px;
       padding-top: 30px;
+      line-height: 1.3;
     }
   }
   #icons-arrests, #icons-pursued, #icons-bookings, #icons-probation {
@@ -267,6 +291,9 @@ svg {
     padding: 0 100px;
     @media @tablet {
       .flex(0 0 100%);
+    }
+    @media @mobile {
+      padding: 0;
     }
   }
   #bubbles {
@@ -390,12 +417,13 @@ svg {
   align-items: center;
   @media @mobile {
     width: 95%;
+    padding-top: 20px;
   }
   .icon {
     .flex(0 0 0 4%);
     font-size: 25px;
     @media @mobile {
-      font-size: 12px;
+      font-size: 16px;
     }
     // display: inline-block;
     color: @light-gray;
@@ -403,7 +431,7 @@ svg {
     // -ms-transition: color 1000ms linear;
     // transition: color 1000ms linear;
     padding: 0 4px;
-    &.dark, &.show {
+    &.show {
       color: lighten(@special-red,10%);
     }
     &.active {
@@ -502,7 +530,7 @@ svg {
     margin-top: 20px;
   }
   @media @mobile {
-    height: 300px;
+    height: 350px;
     margin: auto;
     // top: 220px;
     padding-top: 10px;
